update: refactor notifications for loans to consumer base primitives from microvault notifications packages
